# gitpod.zellij

./: .gitpod.yml  Cargo.toml  README.md  install.sh
.devcontainer/: devcontainer.json
.devcontainer-gitpod/: devcontainer.json
.github/workflows/: release.yaml
.gitpod/: automations.yaml
src/: gp_tasks.rs  init.rs  main.rs
