[package]
name = "gitpod_zellij"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
regex = "1.8.4"
which = "4.4.0"
# dirs = "5.0.1"
# zellij-tile = "0.37.0"

